# ksplice

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Ksplice.pm.in  Makefile.in  Makefile.ksplice  README  Verbose.pm  aclocal.m4  autogen.sh  configure  configure.ac  inspect.c  kernel-utsname.c  ksplice-apply.in  ksplice-cc.pl  ksplice-create.in  ksplice-obj.pl.in  ksplice-undo.in  ksplice-view.in  objcommon.c  objcommon.h  objmanip.c
autom4te.cache/: output.1  requests  traces.0  traces.1
kmodsrc/: Makefile.in  ksplice-rmsyms.lds  ksplice.c  ksplice.h  ksplice.lds.S  new_code_loader.c  offsets.c  offsets.h  old_code_loader.c
kmodsrc/arm/: ksplice-arch.c
kmodsrc/x86/: ksplice-arch.c
kmodsrc/x86/libudis86/: .gitignore  Makefile  x86optable.xml
ksplice-patch/: ksplice-patch.h  ksplice-shadow.h
